@@ -1,8 +1,11 @@
 2006-04-03  David Reveman  <davidr@novell.com>
 
+	* plugins/water.c: Use char everywhere instead.
+
 	* plugins/water.c: (loadFragmentProgram): GLubyte -> const GLbyte.
 	(loadWaterProgram): char -> GLbyte.
 	(loadBumpMapProgram): char -> GLbyte.
+	Use char everywhere.
 
 	* configure.ac: Bump version to 0.0.8.
 
